- Fixed bug #26304 (Unexpected data loss when opening dba file).